2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&rule_define): When you discover a suffix rules,
	register the extensions for .SUFFIXES.
	(&handle_texinfo): Don't register the suffixes.
	(&get_object_extension): Don't register suffixes, let them be
	discovered in depend2.am.
	(&handle_emacs_lisp): Depend on your lisp.am.
	* lisp.am: Include the rule &handle_emacs_lisp used to output.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* subdirs.am: Don't define info related recursive targets.
	* texinfos.am: Do.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* subdirs.am (RECURSIVE_TARGETS): New variable.
	Use it.
	* automake.in (&handle_subdirs): Output it.
	(&file_contents_internal): Support value spread on several lines.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&handle_man_pages): Rely on mans.am to define
	man%SECTION%dir and MANS.
	* mans.am: Do it.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&variable_dump): Use %var_type properly.
	(&macro_define): Enforce better overriding rules.
	Handle the special case that used to handle...
	(&define_pretty_variable): this.
	Hence, don't.
	The variables you define are owned by Automake.
	(&generate_makefile): PRE_INSTALL and co must not be defined *by
	the user*.
	(&variable_defined): Now independent from the owner.
	(&variable_output, &variable_pretty_output): Adjust to %var_type.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in (%var_was_plus_eq): Rename as...
	(%var_type): this.
	(%def_type): Remove.
	(&macro_define): %var_type may now hold `', `+', or `:'.
	(%conditional, %am_vars, %content_lines): Rename as...
	(%var_value, %var_comment, %var_line): these.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&variable_output): Admit a list of @CONDS.
	(&variable_pretty_output): New.
	(&define_pretty_variable): Use it.
	(&read_am_file, &file_contents_internal): Prepend a separator to
	$am_vars only if there is none yet.