@@ -1,5 +1,12 @@
 2001-04-09  Akim Demaille  <akim@epita.fr>
 
+	* automake.in: Use simple quotes to define the _PATTERN variables
+	to unobfuscate the regexps.
+	($AM_CONDITIONAL_PATTERN): Let the user quote the variable.
+
+	
+2001-04-09  Akim Demaille  <akim@epita.fr>
+
 	* automake.in (&rule_define): When you discover a suffix rules,
 	register the extensions for .SUFFIXES.
 	(&handle_texinfo): Don't register the suffixes.
